old-code/sa/prometheus/gke-logging/loki-dirstributed/vs-inner.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-distributed
  namespace: loki
spec:
  gateways:
  - istio-system/g32-istio-ingressgateway-inner
  hosts:
  # - loki-distributed.g32-prod.com
  - loki-test.g32-prod.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loki-distributed-query-frontend.loki.svc.cluster.local
        port:
          number: 3100
